Add more PRs to the list of changes

--- a/meilisearch-release-changelog/v1.4.0.md
+++ b/meilisearch-release-changelog/v1.4.0.md
@@ -63,14 +63,24 @@ This feature can be used together with the `stopWords` and `synonyms` index sett
 Done by @ManyTheFish in #3946
 
 ## Other improvements
-TBD
+
+Meilisearch better hides your data and no longer shows hidden document's fields in error messages. In case you are trying to sort by using a field that is not sortable but there are some of them that are not displayed either, you will see a message like the following:
+
+```
+Available sortable attributes are: price, stock, <..hidden-attributes>.
+```
+
+Done by @vivek-26 in #3945
 
 # Fixes 🐞
 
-* Fix synonyms display (#3946) @ManyTheFish
+  * Fix synonyms display (#3946) @ManyTheFish
+  * Accept the `null` JSON value as a value of the `_vectors` field (#3998) @Kerollmops
+  * Fix the ranking rule by temporarily disabling an assert in the bucket sort algorithm (#4013) @Kerollmops
 
 # Misc
 
+  * Bump charabia to 0.8.3 (#4008) @Kerollmops
   * Upgrade Meilisearch dependencies (#3987) @ManyTheFish
   * Upgrade CI dependencies (#3871, #3969 and #3968)
   * Fix CI benchmarks (#3963) @irevoire
@@ -79,8 +89,7 @@ TBD
   * Update and fix the CI Test Suite (#3918) @Kerollmops
   * Improve CI test suite for manual trigger events (#3989) @curquiza
   * Update README.md (#3895 and #3932) @ferdi05 & @Strift
-  * TBD
 
 ❤️ Thanks again to our external contributors:
-- [Meilisearch](https://github.com/meilisearch/meilisearch): @JannisK89
-- [Charabia](https://github.com/meilisearch/charabia): TBD
+- [Meilisearch](https://github.com/meilisearch/meilisearch): @JannisK89, @vivek-26
+- [Charabia](https://github.com/meilisearch/charabia): @vvv
