--- a/meilisearch-release-changelog/v1.4.0.md
+++ b/meilisearch-release-changelog/v1.4.0.md
@@ -89,6 +89,7 @@ Done by @vivek-26 in #3945
   * Update and fix the CI Test Suite (#3918) @Kerollmops
   * Improve CI test suite for manual trigger events (#3989) @curquiza
   * Update README.md (#3895 and #3932) @ferdi05 & @Strift
+  * Fix Homebrew CI (#4016) @Kerollmops
 
 ❤️ Thanks again to our external contributors:
 - [Meilisearch](https://github.com/meilisearch/meilisearch): @JannisK89, @vivek-26
