Add missing PR following RC1

--- a/meilisearch-release-changelog/v1.4.0.md
+++ b/meilisearch-release-changelog/v1.4.0.md
@@ -71,7 +71,10 @@ Done by @vivek-26 in #3945
 
 # Fixes 🐞
 
-  * Fix synonyms display (#3946) @ManyTheFish
+* Fix synonyms display (#3946) @ManyTheFish
+* Fix thai synonyms (#4033) @Kerollmops
+* Fix synonyms with separators (#3994) @ManyTheFish
+* Fix the swap index tasks (#4041) @irevoire
 
 # Misc
 
