Update changelogs following rc2

--- a/meilisearch-release-changelog/v1.4.0.md
+++ b/meilisearch-release-changelog/v1.4.0.md
@@ -75,6 +75,9 @@ Done by @vivek-26 in #3945
 * Fix thai synonyms (#4033) @Kerollmops
 * Fix synonyms with separators (#3994) @ManyTheFish
 * Fix the swap index tasks (#4041) @irevoire
+* Fix highlighting bug when searching for a phrase with cropping (#4028) @vivek-26
+* Empty arrays/objects now return empty instead of null (#3997) @dogukanakkaya
+* Fix the stats of the documents deletion by filter (#4053) @irevoire
 
 # Misc
 
@@ -89,4 +92,4 @@ Done by @vivek-26 in #3945
   * Fix Homebrew CI (#4016) @Kerollmops
 
 ❤️ Thanks again to our external contributors:
-- [Meilisearch](https://github.com/meilisearch/meilisearch): @JannisK89, @vivek-26
+- [Meilisearch](https://github.com/meilisearch/meilisearch): @dogukanakkaya, @JannisK89, and @vivek-26.
