--- a/meilisearch-release-changelog/v1.4.0.md
+++ b/meilisearch-release-changelog/v1.4.0.md
@@ -78,6 +78,40 @@ Done by @vivek-26 in #3945
 * Fix highlighting bug when searching for a phrase with cropping (#4028) @vivek-26
 * Empty arrays/objects now return empty instead of null (#3997) @dogukanakkaya
 * Fix the stats of the documents deletion by filter (#4053) @irevoire
+* `\` can now be used at the end of the `filter` search parameter values (#4038 and #4043) @Kerollmops
+
+## 🔴 Usage breaking change following `filter` bug fix
+
+⚠️ This section only concerns users using the `filter` search parameter with `\` characters in the filter expression.
+
+In this version, we fixed a bug regarding `\` in the `filter` search parameter expression. **Before v1.4.0, the users were not able to express all the filter expression they wanted.**
+
+For example, if you add the following documents:
+
+```json
+[
+  {
+    "id": 1,
+    "path": "my\\test\\path"
+  },
+  {
+    "id": 2,
+    "path": "my\\test\\path\\"
+  }
+]
+```
+
+(`\\` escaping here is about JSON escaping)
+
+Before v1.4.0, if you wanted to filter on document 2, the filters `path = "my\\test\\path\\"` and `path = "my\\test\\path\\\"` led to an error.
+
+Now, in v1.4.0, you can express all the possible filter expressions, no matter if the filter contains `\` or not. But to reach this, **you have escape all the `\` characters in your filter**.
+
+Following our example, to finally succeed in filtering on document 2, the filter should be: `path = "my\\\\test\\\\path\\\\"`.
+
+👉 If you come from v1.3.X or before, and you used `\` in `filter`, here is the change to apply: following our example, to filter on document 1, before v1.4.0, you could apply the filter `path = "my\\test\\path"`. Now, from v1.4.0, you have to escape the `\` and apply the following filter: `path = "my\\\\test\\\\path"``
+
+If you need any help with this change, please feel free to reach us on our [Discord](https://discord.meilisearch.com/).
 
 # Misc
 
