--- a/meilisearch-release-changelog/v1.4.0.md
+++ b/meilisearch-release-changelog/v1.4.0.md
@@ -105,7 +105,7 @@ For example, if you add the following documents:
 
 Before v1.4.0, if you wanted to filter on document 2, the filters `path = "my\\test\\path\\"` and `path = "my\\test\\path\\\"` led to an error.
 
-Now, in v1.4.0, you can express all the possible filter expressions, no matter if the filter contains `\` or not. But to reach this, **you have escape all the `\` characters in your filter**.
+Now, in v1.4.0, you can express all the possible filter expressions, no matter if the filter contains `\` or not. But to reach this, **you have to escape all the `\` characters in your filter**.
 
 Following our example, to finally succeed in filtering on document 2, the filter should be: `path = "my\\\\test\\\\path\\\\"`.
 
