--- a/meilisearch-release-changelog/v1.4.0.md
+++ b/meilisearch-release-changelog/v1.4.0.md
@@ -109,7 +109,8 @@ Now, in v1.4.0, you can express all the possible filter expressions, no matter i
 
 Following our example, to finally succeed in filtering on document 2, the filter should be: `path = "my\\\\test\\\\path\\\\"`.
 
-👉 If you come from v1.3.X or before, and you used `\` in `filter`, here is the change to apply: following our example, to filter on document 1, before v1.4.0, you could apply the filter `path = "my\\test\\path"`. Now, from v1.4.0, you have to escape the `\` and apply the following filter: `path = "my\\\\test\\\\path"``
+👉 If you come from v1.3.X or before, and you used `\` in `filter`, here is the change to apply: following our example, to filter on document 1, before v1.4.0, you could apply the filter `path = "my\\test\\path"`. Now, from v1.4.0, you have to escape the `\` and apply the following filter: `path = "my\\\\test\\\\path"`.
+Two escapings are applied: the JSON escaping and the Meilisearch filter escaping. The Meilisearch filter transforms the `\\\\` into `\\` and the JSON parsing ends up with a single `\`.
 
 If you need any help with this change, please feel free to reach us on our [Discord](https://discord.meilisearch.com/).
 
