Fix and remove useless part

--- a/meilisearch-release-changelog/v1.5.0.md
+++ b/meilisearch-release-changelog/v1.5.0.md
@@ -21,9 +21,7 @@ The relevancy can be slightly different for queries containing 4 words or more. 
 
 For datasets containing only a few words per field, even if you have a huge number of fields, the improvement might not be visible. Don't worry, we keep working on the indexing speed in the next sprint to address other use cases.
 
-Done by @ManyThiFish in #4131
-
-Diff indexing??? -> TBD if present in the sprint.
+Done by @ManyTheFish in #4131
 
 ## Snapshots on-demand
 
