Add Khmer language support

--- a/meilisearch-release-changelog/v1.5.0.md
+++ b/meilisearch-release-changelog/v1.5.0.md
@@ -62,6 +62,7 @@ Done by @Kerollmops in #4073.
 
 * Make the [experimental `/metrics` route](https://github.com/meilisearch/product/discussions/625) activable via HTTP, and not only via CLI flag. Done by @braddotcoffee with the review of @vivek-26 in #4126.
 ⚠️ We don't recommend using CLI flag and HTTP calls at the same time to manage this feature.
+* Add Khmer language support (#4169 and meilisearch/charabia#203) @xshadowlegendx and @ManyTheFish
 
 # Fixes 🐞
 TBD
@@ -84,4 +85,4 @@ TBD
 
 ❤️ Thanks again to our external contributors:
 - [Meilisearch](https://github.com/meilisearch/meilisearch): @braddotcoffee, @harshau007, and @vivek-26.
-- [Charabia](https://github.com/meilisearch/charabia): TBD
+- [Charabia](https://github.com/meilisearch/charabia): @choznerol and @xshadowlegendx.
