--- a/meilisearch-release-changelog/v1.5.0.md
+++ b/meilisearch-release-changelog/v1.5.0.md
@@ -79,6 +79,7 @@ TBD
   * Dependency issue is now created every 6 months (#4065) @curquiza
   * Rename benchmark CI file to find it easily in the manifest list (#4125) @curquiza
   * Update CI dependencies
+  * Fix issue with warning in CI (#4174) @irevoire
 * Misc
   * Enable analytics in debug builds (#4074) @irevoire
   * Rewrite segment_analytics module with the destructuring syntax by (#4056) @vivek-26
