--- a/meilisearch-release-changelog/v1.5.0.md
+++ b/meilisearch-release-changelog/v1.5.0.md
@@ -3,7 +3,7 @@
 <!-- The following line should ONLY be put PRE-release changelogs -->
 ⚠️ Since this is a release candidate (RC), we do NOT recommend using it in a production environment. Is something not working as expected? We welcome [bug reports](https://github.com/meilisearch/meilisearch/issues/new/choose) and [feedback about new features](https://github.com/meilisearch/product/discussions).
 
-Meilisearch v1.5 introduces improvements in indexing speed and the possibility of triggering snapshots on-demand, as it's already possible with dumps.
+Meilisearch v1.5 introduces improvements in indexing speed and the possibility of triggering snapshots on demand.
 
 <!-- The following lines should NOT be put in the PRE-release changelogs -->
 🧰 All official Meilisearch integrations (including SDKs, clients, and other tools) are compatible with this Meilisearch release. Integration deployment happens between 4 to 48 hours after a new version becomes available.
