--- a/meilisearch-release-changelog/v1.5.0.md
+++ b/meilisearch-release-changelog/v1.5.0.md
@@ -25,9 +25,7 @@ Done by @ManyTheFish in #4131
 
 ## Snapshots on-demand
 
-We have introduced a new route, similar to the `/dumps` one, creating snapshots on-demand.
-
-To create a snapshot:
+This release introduces a new `/snapshots` API route for creating snapshots on demand:
 
 ```bash
 curl -X POST HTTP://localhost:7700/snapshots
