--- a/meilisearch-release-changelog/v1.5.0.md
+++ b/meilisearch-release-changelog/v1.5.0.md
@@ -31,7 +31,7 @@ This release introduces a new `/snapshots` API route for creating snapshots on d
 curl -X POST HTTP://localhost:7700/snapshots
 ```
 
-This route will return a [task](https://www.meilisearch.com/docs/reference/api/tasks).
+This route returns a [summarized task object](https://www.meilisearch.com/docs/reference/api/tasks).
 
 The snapshot file will be created on your machine in the directory defined with [`--snapshot-dir` flag](https://www.meilisearch.com/docs/learn/configuration/instance_options#snapshot-destination) (default: `snapshots/`)
 
