Apply suggestions from code review
Co-authored-by: gui machiavelli <hey@guimachiavelli.com>

--- a/meilisearch-release-changelog/v1.5.0.md
+++ b/meilisearch-release-changelog/v1.5.0.md
@@ -33,33 +33,31 @@ curl -X POST HTTP://localhost:7700/snapshots
 
 This route returns a [summarized task object](https://www.meilisearch.com/docs/reference/api/tasks).
 
-The snapshot file will be created on your machine in the directory defined with [`--snapshot-dir` flag](https://www.meilisearch.com/docs/learn/configuration/instance_options#snapshot-destination) (default: `snapshots/`)
+By default, Meilisearch creates snapshots inside the `/snapshots` directory. You can customize this directory with the [`--snapshot-dir` configuration option](https://www.meilisearch.com/docs/learn/configuration/instance_options#snapshot-destination). 
 
 Done by @irevoire in #4051.
 
-## Experimental feature: export Puffin Reports
+## Experimental feature: Export Puffin reports
 
-Enabling this experimental feature will make Meilisearch automatically export `.puffin` file reports. Analyzing those files can give great information on what's happening inside the engine and how the Meilisearch team can improve the indexing performances.
+This experimental feature allows Meilisearch to automatically export `.puffin`  reports. `.puffin` files provide information on Meilisearch's internal processes and may be useful when diagnosing performance issues.
 
-How to activate the feature:
-
+Use the `/experimental-features` endpoint to activate this feature:
 ```bash
 curl \
   -X PATCH 'http://localhost:7700/experimental-features/' \
   -H 'Content-Type: application/json'  \
---data-binary '{
+  --data-binary '{
     "exportPuffinReports": true
   }'
 ```
 
-📣 To get more information about the feature or to give any feedback, please refer to [this discussion](https://github.com/meilisearch/product/discussions/693).
+📣 [Consult the GitHub discussion](https://github.com/meilisearch/product/discussions/693) for more information.
 
 Done by @Kerollmops in #4073.
 
 ## Other improvements
 
-* Make the [experimental `/metrics` route](https://github.com/meilisearch/product/discussions/625) activable via HTTP, and not only via CLI flag. Done by @braddotcoffee with the review of @vivek-26 in #4126.
-⚠️ We don't recommend using CLI flag and HTTP calls at the same time to manage this feature.
+* The [experimental `/metrics` route](https://github.com/meilisearch/product/discussions/625) can now be activated via HTTP. Done by @braddotcoffee with the review of @vivek-26 in #4126. ⚠️ _Avoid using CLI flag and the API  at the same time when managing experimental features._
 * Add Khmer language support (#4169 and meilisearch/charabia#203) @xshadowlegendx and @ManyTheFish
 
 # Fixes 🐞
@@ -67,20 +65,20 @@ TBD
 
 # Misc
 
-* Dependencies upgrade for security reasons
+* Update dependencies
   * Bump webpki to 0.22.2 (#4101)
   * Bump rustls-webpki from 0.100.1 to 0.100.2 (#4009)
 * CIs and tests
   * Add CI to trigger benchmarks in PR (#4102) @Kerollmops
-  * Improve test-suite.yml for CI failing when disabling tokenization (#4005) @harshau007
+  * Improve `test-suite.yml` to prevent CI from failing when disabling tokenization (#4005) @harshau007
   * Add more integrations to SDK CI (#4044) @curquiza
   * Dependency issue is now created every 6 months (#4065) @curquiza
-  * Rename benchmark CI file to find it easily in the manifest list (#4125) @curquiza
+  * Rename benchmark CI file so it is easier to find in the manifest list (#4125) @curquiza
   * Update CI dependencies
-  * Fix issue with warning in CI (#4174) @irevoire
+  * Fix warning in CI (#4174) @irevoire
 * Misc
   * Enable analytics in debug builds (#4074) @irevoire
-  * Rewrite segment_analytics module with the destructuring syntax by (#4056) @vivek-26
+  * Rewrite `segment_analytics` module with destructuring syntax (#4056) @vivek-26
 
 ❤️ Thanks again to our external contributors:
 - [Meilisearch](https://github.com/meilisearch/meilisearch): @braddotcoffee, @harshau007, and @vivek-26.
