--- a/meilisearch-release-changelog/v1.5.0.md
+++ b/meilisearch-release-changelog/v1.5.0.md
@@ -33,7 +33,7 @@ curl -X POST HTTP://localhost:7700/snapshots
 
 This route returns a [summarized task object](https://www.meilisearch.com/docs/reference/api/tasks).
 
-By default, Meilisearch creates snapshots inside the `/snapshots` directory. You can customize this directory with the [`--snapshot-dir` configuration option](https://www.meilisearch.com/docs/learn/configuration/instance_options#snapshot-destination). 
+By default, Meilisearch creates snapshots inside the `/snapshots` directory. You can customize this directory with the [`--snapshot-dir` configuration option](https://www.meilisearch.com/docs/learn/configuration/instance_options#snapshot-destination).
 
 Done by @irevoire in #4051.
 
@@ -59,6 +59,9 @@ Done by @Kerollmops in #4073.
 
 * The [experimental `/metrics` route](https://github.com/meilisearch/product/discussions/625) can now be activated via HTTP. Done by @braddotcoffee with the review of @vivek-26 in #4126. ⚠️ _Avoid using CLI flag and the API  at the same time when managing experimental features._
 * Add Khmer language support (#4169 and meilisearch/charabia#203) @xshadowlegendx and @ManyTheFish
+* Integrate the `meilitool` command line interface into the meilisearch Docker image (#4167) @Kerollmops
+This tool provides commands to force the cancellation of tasks and the creation of dumps for stuck Meilisearch instances.
+In the running Meilisearch container, just do `meilitool --help` to get the usage.
 
 # Fixes 🐞
 TBD
