Update following review

--- a/meilisearch-release-changelog/v1.5.0.md
+++ b/meilisearch-release-changelog/v1.5.0.md
@@ -15,11 +15,11 @@ Some SDKs might not include all new features—consult the project repository fo
 
 ## Indexing speed improvements
 
-For datasets containing a lot of words (and/or with a large variety of words), we improved the indexing speed between 5% and 20%, depending on your use cases and your documents. The more your documents contain a lot of words, the more the improvements will be visible.
+v1.5 improves indexing speed for text-heavy datasets. Datasets with fields containing many words (100 or more) should see a reduction of 5% to 20% to indexing times, with gains proportional to the amount of words in a document.
 
-The relevancy can be slightly different for queries containing 4 words or more. Let us know [here](https://github.com/meilisearch/product/discussions) if you have any issues or unexpected behavior.
+This might result in minor impact to search result relevancy for queries containing 4 words or more. [Contact us in our GitHub Discussions page](https://github.com/orgs/meilisearch/discussions/704) if you have any issues or unexpected behavior regarding the relevancy.
 
-For datasets containing only a few words per field, even if you have a huge number of fields, the improvement might not be visible. Don't worry, we keep working on the indexing speed in the next sprint to address other use cases.
+Indexing speed improvements might not be visible in datasets with fewer words (less than 20 words per fields), regardless of how many fields they contain.
 
 Done by @ManyTheFish in #4131
 
@@ -60,7 +60,7 @@ Done by @Kerollmops in #4073.
 * The [experimental `/metrics` route](https://github.com/meilisearch/product/discussions/625) can now be activated via HTTP. Done by @braddotcoffee with the review of @vivek-26 in #4126. ⚠️ _Avoid using CLI flag and the API  at the same time when managing experimental features._
 * Add Khmer language support (#4169 and meilisearch/charabia#203) @xshadowlegendx and @ManyTheFish
 * Integrate the `meilitool` command line interface into the meilisearch Docker image (#4167) @Kerollmops
-This tool provides commands to force the cancellation of tasks and the creation of dumps for stuck Meilisearch instances.
+This tool provides commands to enforce the cancellation of tasks and the creation of dumps for stuck Meilisearch instances.
 In the running Meilisearch container, just do `meilitool --help` to get the usage.
 
 # Fixes 🐞
