--- a/meilisearch-release-changelog/v1.5.0.md
+++ b/meilisearch-release-changelog/v1.5.0.md
@@ -10,7 +10,7 @@ Some SDKs might not include all new features—consult the project repository fo
 
 ## Indexing speed improvements
 
-v1.5 improves indexing speed for text-heavy datasets. Datasets with fields containing many words (100 or more) should see a reduction of 5% to 20% to indexing times, with gains proportional to the amount of words in a document.
+v1.5 improves indexing speed for text-heavy datasets. Datasets with fields containing more than 100 words should see a reduction of 5% to 20% to indexing times, with gains proportional to the amount of words in a document.
 
 This might result in minor impact to search result relevancy for queries containing 4 words or more. [Contact us in our GitHub Discussions page](https://github.com/orgs/meilisearch/discussions/704) if you have any issues or unexpected behavior regarding the relevancy.
 
