--- a/meilisearch-release-changelog/v1.5.0.md
+++ b/meilisearch-release-changelog/v1.5.0.md
@@ -12,7 +12,7 @@ Some SDKs might not include all new features—consult the project repository fo
 
 v1.5 improves indexing speed for text-heavy datasets. Datasets with fields containing more than 100 words should see a reduction of 5% to 20% to indexing times, with gains proportional to the amount of words in a document.
 
-This might result in minor impact to search result relevancy for queries containing 4 words or more. [Contact us in our GitHub Discussions page](https://github.com/orgs/meilisearch/discussions/704) if you have any issues or unexpected behavior regarding the relevancy.
+This might result in minor impact to search result relevancy for queries containing 4 words or more. [Contact us in our GitHub Discussions page](https://github.com/orgs/meilisearch/discussions/704) if this is significantly affecting your application.
 
 Indexing speed improvements might not be visible in datasets with fewer words (less than 20 words per fields), regardless of how many fields they contain.
 
