--- a/meilisearch-release-changelog/v1.5.0.md
+++ b/meilisearch-release-changelog/v1.5.0.md
@@ -14,7 +14,7 @@ v1.5 improves indexing speed for text-heavy datasets. Datasets with fields conta
 
 This might result in minor impact to search result relevancy for queries containing 4 words or more. [Contact us in our GitHub Discussions page](https://github.com/orgs/meilisearch/discussions/704) if this is significantly affecting your application.
 
-Indexing speed improvements might not be visible in datasets with fewer words (less than 20 words per fields), regardless of how many fields they contain.
+Indexing speed improvements might not be visible in datasets with fewer than 20 words per field, regardless of how many fields each document contains.
 
 Done by @ManyTheFish in #4131
 
