Add the fixes from v1.5.0-rc.3

--- a/meilisearch-release-changelog/v1.5.0.md
+++ b/meilisearch-release-changelog/v1.5.0.md
@@ -59,7 +59,8 @@ This tool provides commands to enforce the cancellation of tasks and the creatio
 In the running Meilisearch container, just do `meilitool --help` to get the usage.
 
 # Fixes 🐞
-TBD
+* Throw an error when the vector in a search query does not match the size of the already indexed vectors (#4204) @dureuill
+* Prevent the search on the processing index from hanging (#4205) @dureuill
 
 # Misc
 
