Add Louis' PR following the fix

--- a/meilisearch-release-changelog/v1.6.0.md
+++ b/meilisearch-release-changelog/v1.6.0.md
@@ -193,6 +193,7 @@ TBD
 * Dependencies upgrade
   * Updating CI dependencies
   * Update to heed 0.20 (#4223) @Kerollmops
+  * Set rust toolchain to 1.71.1 in dockerfile (#4261) @dureuill
 * Documentation
   * Remove banner (#4191) @curquiza
 * Misc
