--- a/meilisearch-release-changelog/v1.6.0.md
+++ b/meilisearch-release-changelog/v1.6.0.md
@@ -122,7 +122,7 @@ You can check out
 - [this article](https://blog.kerollmops.com/spotify-inspired-elevating-meilisearch-with-hybrid-search-and-rust)
 - [Arroy](https://github.com/meilisearch/arroy), the opensource repository based on [Annoy](https://github.com/spotify/annoy), written in Rust. This repository is created and maintained by the Meilisearch engine team. This is a Rust library to search for vectors in space that are close to a given query vector
 
-Done in #4226 by @dureuill, @irevoire, and @Kerollmops.
+Done in #4226 by @dureuill, @irevoire, @Kerollmops and @ManyTheFish.
 
 ## Improve indexing speed
 
@@ -193,7 +193,7 @@ TBD
 * Dependencies upgrade
   * Updating CI dependencies
   * Update to heed 0.20 (#4223) @Kerollmops
-  * Set rust toolchain to 1.71.1 in dockerfile (#4261) @dureuill
+  * Set rust toolchain to 1.71.1 in Dockerfile (#4261) @dureuill
 * Documentation
   * Remove banner (#4191) @curquiza
 * Misc
