--- a/meilisearch-release-changelog/v1.6.0.md
+++ b/meilisearch-release-changelog/v1.6.0.md
@@ -187,6 +187,7 @@ TBD
 
 * The dump tasks are now cancellable (#4208) @irevoire
 * Fix: the payload size limit is now also applied on `/documents/delete-batch` (#4231) @Karribalu
+* Fix: typo tolerance is ineffective for attributes with similar content (related issue: #4256)
 
 # Misc
 
