--- a/meilisearch-release-changelog/v1.6.0.md
+++ b/meilisearch-release-changelog/v1.6.0.md
@@ -29,26 +29,19 @@ You must set them via the `/PATCH indexes/:index_uid/settings` route. Here is an
 {
   "embedders": {
     "default": {
-      "source": {
-        "openAi": {
-          "apiKey": "<your-OpenAI-API-key>",
-          "model": "text-embedding-ada-002"
-        }
-      },
-      "documentTemplate": {
-        "template": "A movie titled '{{doc.title}}' whose description starts with {{doc.overview|truncatewords: 20}}"
-      }
+      "source":  "openAi",
+      "apiKey": "<your-OpenAI-API-key>",
+      "model": "text-embedding-ada-002",
+      "documentTemplate": "A movie titled '{{doc.title}}' whose description starts with {{doc.overview|truncatewords: 20}}"
     },
     "image": {
-      "source": { "userProvided": { "dimensions": 512 } }
+      "source": "userProvided",
+      "dimensions": 512
     },
     "translation": {
-      "source": {
-        "huggingFace": { "model": "sentence-transformers/paraphrase-multilingual-MiniLM-L12-v2" }
-      },
-      "documentTemplate": {
-        "template": "A movie titled '{{doc.title}}' whose description starts with {{doc.overview|truncatewords: 20}}"
-      }
+      "source": "huggingFace",
+      "model": "sentence-transformers/paraphrase-multilingual-MiniLM-L12-v2",
+      "documentTemplate": "A movie titled '{{doc.title}}' whose description starts with {{doc.overview|truncatewords: 20}}"
     }
   }
 }
