Remove exponential mention

--- a/meilisearch-release-changelog/v1.6.0.md
+++ b/meilisearch-release-changelog/v1.6.0.md
@@ -123,7 +123,7 @@ This version introduces huge indexing performance improvements. Meilisearch has 
 - store and pre-compute less data than in the previous versions
 - re-index and delete only the necessary data when updating a document. For instance, if updating only one field in the document, Meilisearch will only recompute this field and will no longer re-index the complete document.
 
-Some metrics: on an e-commerce dataset of 2.5Gb of documents, we noticed more than a 50% time reduction when adding documents for the first time. With a scenario updating the documents frequently and partially, the reduction is about 50% or even 75%. Most of all, the indexing time does not exponentially increase anymore.
+Some metrics: on an e-commerce dataset of 2.5Gb of documents, we noticed more than a 50% time reduction when adding documents for the first time. With a scenario updating the documents frequently and partially, the reduction is about 50% or even 75%.
 
 ⚠️ Performance improvements can highly depend on your dataset, the size of your machine and the way of indexing documents.
 
