Add missing info following rc3

--- a/meilisearch-release-changelog/v1.6.0.md
+++ b/meilisearch-release-changelog/v1.6.0.md
@@ -168,13 +168,13 @@ Done in #4249 by @Kerollmops
 
 ## Task queue webhook
 
-TBD
+Meilisearch introduces a configuration for a webhook url that will be called whenever a task finishes so a third party can be notified.
+
+To define the webhook URL, [you can configure it launch](https://www.meilisearch.com/docs/learn/configuration/instance_options): use this environment variable `MEILI_TASK_WEBHOOK_URL`, the CLI argument `--task-webhook-url` when launching Meilisearch, or directly in the [config file](https://www.meilisearch.com/docs/learn/configuration/instance_options#configuration-file).
+
+You can define the authorization header the same way (`MEILI_TASK_WEBHOOK_AUTHORIZATION_HEADER` or `--task-webhook-authorization-header`).
 
 Done by @irevoire in #4238
-
-## Other improvements
-
-TBD
 
 # Fixes 🐞
 
@@ -189,6 +189,7 @@ TBD
   * Updating CI dependencies
   * Update to heed 0.20 (#4223) @Kerollmops
   * Set rust toolchain to 1.71.1 in Dockerfile (#4261) @dureuill
+  * Update mini-dashboard to v0.2.12 (#4277) @mdubus
 * Documentation
   * Remove banner (#4191) @curquiza
 * Misc
