Update missing part with new settings format for vector search

--- a/meilisearch-release-changelog/v1.6.0.md
+++ b/meilisearch-release-changelog/v1.6.0.md
@@ -84,7 +84,8 @@ For people who used Meilisearch with the experimental vector search feature (bet
 ```json
 "embedders": {
     "default": {
-      "source": { "userProvided": { "dimensions": 512 } }
+      "source": "userProvided",
+      "dimensions": 512
     }
 }
 ```
