Add missing breaking change in vector search

--- a/meilisearch-release-changelog/v1.6.0.md
+++ b/meilisearch-release-changelog/v1.6.0.md
@@ -79,6 +79,8 @@ Here is an example of a hybrid search payload:
 
 For people who used Meilisearch with the experimental vector search feature (between v1.3.0 and v1.5.0), some changes happened in the API usage:
 
+- During a search, when providing the `q` and `vector` parameters, you now also must provide the `hybrid` parameter.
+
 - Before, sending your vectors without defining any models to use vector search was possible. Now, we have to define a model in the settings.
 
 ```json
