--- a/meilisearch-release-changelog/v1.6.0.md
+++ b/meilisearch-release-changelog/v1.6.0.md
@@ -112,11 +112,8 @@ Now the format is:
 
 To know more about the new usage, refer to the sections above about settings or to [the documentation](TBD)
 
-### More technical information
-
-You can check out
-- [this article](https://blog.kerollmops.com/spotify-inspired-elevating-meilisearch-with-hybrid-search-and-rust)
-- [Arroy](https://github.com/meilisearch/arroy), the opensource repository based on [Annoy](https://github.com/spotify/annoy), written in Rust. This repository is created and maintained by the Meilisearch engine team. This is a Rust library to search for vectors in space that are close to a given query vector
+> [!TIP]
+> The new vector search functionality uses [Arroy](https://github.com/meilisearch/arroy), a Rust library developed by the Meilisearch engine team. Check out @Kerollmops [blog post describing the whole process](https://blog.kerollmops.com/spotify-inspired-elevating-meilisearch-with-hybrid-search-and-rust).
 
 Done in #4226 by @dureuill, @irevoire, @Kerollmops and @ManyTheFish.
 
