Apply suggestions from code review
Co-authored-by: gui machiavelli <hey@guimachiavelli.com>

--- a/meilisearch-release-changelog/v1.6.0.md
+++ b/meilisearch-release-changelog/v1.6.0.md
@@ -119,21 +119,21 @@ Done in #4226 by @dureuill, @irevoire, @Kerollmops and @ManyTheFish.
 
 ## Improve indexing speed
 
-This version introduces huge indexing performance improvements. Meilisearch has been optimized to
-- store and pre-compute less data than in the previous versions
-- re-index and delete only the necessary data when updating a document. For instance, if updating only one field in the document, Meilisearch will only recompute this field and will no longer re-index the complete document.
+This version introduces significant indexing performance improvements. Meilisearch v1.6 has been optimized to:
+- store and pre-compute less data than in previous versions
+- re-index and delete only the necessary data when updating a document. For example, when you update one document field, Meilisearch will no longer re-index the whole document
 
-Some metrics: on an e-commerce dataset of 2.5Gb of documents, we noticed more than a 50% time reduction when adding documents for the first time. With a scenario updating the documents frequently and partially, the reduction is about 50% or even 75%.
+On an e-commerce dataset of 2.5Gb of documents, these changes led to more than a 50% time reduction when adding documents for the first time. When updating documents frequently and partially, re-indexing performance hovers between 50% and 75%.
 
-⚠️ Performance improvements can highly depend on your dataset, the size of your machine and the way of indexing documents.
+⚠️ Performance improvements depend on your dataset, your machine, and how you're indexing documents.
 
 Done in #4090 by @ManyTheFish, @dureuill and @Kerollmops.
 
 ## Disk space usage reduction
 
-We made improvements regarding disk space usage. Meilisearch now stores less internal data, so require a smaller database on your disk.
+Meilisearch now stores less internal data. This leads to smaller database disk sizes.
 
-With a ~15Mb dataset, the created database is 40% and 50% smaller. Additionally, after several updates, the database size becomes more stable, which was not the case before. So, the more you add documents, the more this improvement will be visible.
+With a ~15Mb dataset, the created database is 40% and 50% smaller. Additionally, the database size has become more stable and will display more modest growth with new document additions.
 
 ## Customize proximity precision to gain indexing performance
 
