Apply suggestions from code review
Co-authored-by: gui machiavelli <hey@guimachiavelli.com>

--- a/meilisearch-release-changelog/v1.6.0.md
+++ b/meilisearch-release-changelog/v1.6.0.md
@@ -158,21 +158,31 @@ Technical explanations: `byWord` considers the proximity as an exact distance be
 
 Done in #4225 by @ManyTheFish.
 
-## Experimental: limit the number of batched tasks
+## Experimental: Limit the number of batched tasks
 
-To speed up indexing performance, Meilisearch batches similar tasks to process them as a big batch. However, sometimes, the huge amount of enqueued tasks leads to issues with Meilisearch crashing or being stuck.
+Meilisearch may occasionally batch too many tasks together, which may lead to system instability. Relaunch Meilisearch with the `--experimental-max-number-of-batched-tasks` configuration option to address this issue:
 
-To limit the number of batched tasks, [you can configure it launch](https://www.meilisearch.com/docs/learn/configuration/instance_options): use this environment variable `MEILI_EXPERIMENTAL_MAX_NUMBER_OF_BATCHED_TASKS`, the CLI argument `--experimental-max-number-of-batched-task` when launching Meilisearch, or directly in the [config file](https://www.meilisearch.com/docs/learn/configuration/instance_options#configuration-file).
+```sh
+./meilisearch --experimental-max-number-of-batched-tasks 100
+```
+
+You may also configure `--experimental-max-number-of-batched-tasks` as an environment variable or directly in the config file with `MEILI_EXPERIMENTAL_MAX_NUMBER_OF_BATCHED_TASKS`.
 
 Done in #4249 by @Kerollmops
 
 ## Task queue webhook
 
-Meilisearch introduces a configuration for a webhook url that will be called whenever a task finishes so a third party can be notified.
+This release introduces a configurable webhook url that will be called whenever Meilisearch finishes processing a task.
 
-To define the webhook URL, [you can configure it launch](https://www.meilisearch.com/docs/learn/configuration/instance_options): use this environment variable `MEILI_TASK_WEBHOOK_URL`, the CLI argument `--task-webhook-url` when launching Meilisearch, or directly in the [config file](https://www.meilisearch.com/docs/learn/configuration/instance_options#configuration-file).
+Relaunch Meilisearch using `--task-webhook-url` and `--task-webhook-authorization-header` to use the webhook:
 
-You can define the authorization header the same way (`MEILI_TASK_WEBHOOK_AUTHORIZATION_HEADER` or `--task-webhook-authorization-header`).
+```sh
+./meilisearch \
+  --task-webhook-url=https://example.com/example-webhook?foo=bar&number=8 \
+  --task-webhook-authorization-header=Bearer aSampleAPISearchKey
+```
+
+You may also define the webhook URL and header with environment variables or in the configuration file with `MEILI_TASK_WEBHOOK_URL` and `MEILI_TASK_WEBHOOK_AUTHORIZATION_HEADER`.
 
 Done by @irevoire in #4238
 
