--- a/meilisearch-release-changelog/v1.6.0.md
+++ b/meilisearch-release-changelog/v1.6.0.md
@@ -13,75 +13,54 @@ Some SDKs might not include all new features—consult the project repository fo
 
 # New features and improvements 🔥
 
-## Experimental: improve vector search
+## Experimental: Automated embeddings generation for vector search
 
-Meilisearch introduces a hybrid search mechanism that allows users to mix full-text and semantic search at search time to provide more accurate and comprehensive results.
+With v1.6, you can configure Meilisearch so it automatically generates embeddings using either OpenAI or HuggingFace. If neither of these third-party options suit your application, you may provide your own embeddings manually:
 
-Plus, you can directly define the embedders you want to use, so you don't need to interact with a third party on your side to generate embeddings: Meilisearch will interact with it for you.
+- `openAI`: Meilisearch uses the OpenAI API to auto-embed your documents. You must supply an OpenAPI key to use this embedder
+- `huggingFace`: Meilisearch automatically downloads the specified `model` from HuggingFace and generates embeddings locally. This will use your CPU and may impact indexing performance
+- `userProvided`: Compute embeddings manually and supply document vectors to Meilisearch. You may be familiar with this approach if you have used vector search in a previous Meilisearch release. Read further for details on breaking changes for user provided embeddings usage
 
-### Settings
+### Usage
 
-Before using hybrid search, you need to define an embedder in your settings. You can even define multiple embedders in the index settings.
+Use the `embedders` index setting to configure embedders. You may set multiple embedders for an index. This example defines 3 embedders named `default`, `image` and `translation`:
 
-You must set them via the `/PATCH indexes/:index_uid/settings` route. Here is an example of a payload defining 3 embedders named `default`, `image` and `translation`:
-
-```json
-{
-  "embedders": {
-    "default": {
-      "source":  "openAi",
-      "apiKey": "<your-OpenAI-API-key>",
-      "model": "text-embedding-ada-002",
-      "documentTemplate": "A movie titled '{{doc.title}}' whose description starts with {{doc.overview|truncatewords: 20}}"
-    },
-    "image": {
-      "source": "userProvided",
-      "dimensions": 512
-    },
-    "translation": {
-      "source": "huggingFace",
-      "model": "sentence-transformers/paraphrase-multilingual-MiniLM-L12-v2",
-      "documentTemplate": "A movie titled '{{doc.title}}' whose description starts with {{doc.overview|truncatewords: 20}}"
+```sh
+curl \
+  -X PATCH 'http://localhost:7700/indexes/movies/settings' \
+  -H 'Content-Type: application/json' \
+  --data-binary '{
+    "embedders": {
+      "default": {
+        "source":  "openAi",
+        "apiKey": "<your-OpenAI-API-key>",
+        "model": "text-embedding-ada-002",
+        "documentTemplate": "A movie titled '{{doc.title}}' whose description starts with {{doc.overview|truncatewords: 20}}"
+      },
+      "image": {
+        "source": "userProvided",
+      },
+      "translation": {
+        "source": "huggingFace",
+        "model": "sentence-transformers/paraphrase-multilingual-MiniLM-L12-v2",
+        "documentTemplate": "A movie titled '{{doc.title}}' whose description starts with {{doc.overview|truncatewords: 20}}"
+      }
     }
-  }
-}
+  }'
 ```
 
-`documentTemplate` is a view of your document that will serve as the base for computing the embedding. This field is a JSON string expecting [Liquid format](https://shopify.github.io/liquid/).
+- `documentTemplate` is a view of your document that will serve as the base for computing the embedding. This field is a JSON string in the [Liquid format](https://shopify.github.io/liquid/)
+- `model` is the model OpenAI or HuggingFace should use when generating document embeddings
 
-3 kinds of embedders are available for `source`:
-- `openAI`: Use the OpenAI API to auto-embed your documents, so your OpenAI API key must be specified.
-- `huggingFace`: download the provided `model` from HuggingFace Hub locally to auto-embed the documents and query.
-- `userProvided`: you send document vectors and query vectors, meaning you have computed the embeddings on your side. It's similar to the v1.3 version of Meilisearch in the way it works; the exception is that a specific embedder must be defined, which wasn’t required before, cf the next section about breaking changes.
+Refer to [the documentation](TBD) for more vector search usage instructions.
 
-⚠️ If using the HuggingFace model, the computation will be done on your machine and will use your CPU (not your GPU), which can lead to bad indexing performance.
+### ⚠️ Vector search breaking changes 
 
-### Hybrid & semantic search
+If you have used vector search between v1.3.0 and v1.5.0, API usage has changed with v1.6:
 
-You can perform a hybrid search by using the `hybrid` field when calling the `POST /index/:index_uid/search` route.
+- When providing both the `q` and `vector` parameters for a single query, you must provide the `hybrid` parameter
 
-Here is an example of a hybrid search payload:
-
-```json
-{
-    "q": "Plumbers and dinosaurs",
-    "hybrid": {
-        "semanticRatio": 0.9,
-        "embedder": "default"
-    }
-}
-```
-
-`embedder` is the embedder you choose to perform the search among the ones you defined in your settings.
-`semanticRatio`: the value should be between 0 and 1. The default value is 0,5. 1 corresponds to a full semantic search, whereas 0 is about a full-text search.
-
-### ⚠️ Breaking changes for beta users of the previous version of vector search
-
-For people who used Meilisearch with the experimental vector search feature (between v1.3.0 and v1.5.0), some changes happened in the API usage:
-
-- During a search, when providing the `q` and `vector` parameters, you now also must provide the `hybrid` parameter.
-
-- Before, sending your vectors without defining any models to use vector search was possible. Now, we have to define a model in the settings.
+- Define a model in your embedder settings is now mandatory:
 
 ```json
 "embedders": {
@@ -92,25 +71,34 @@ For people who used Meilisearch with the experimental vector search feature (bet
 }
 ```
 
-- Meilisearch now supports multiple embedders, so the format for sending documents and vectors changed. Vectors are not arrays anymore but JSON objects.
+- Vectors should be JSON objects instead of arrays:
 
-Before, in your document you provided:
-
-```json
-"_vectors": [
-  [0.0, 0.1]
-]
+```js
+"_vectors": { "image2text": [0.0, 0.1, …] } # ✅
+"_vectors": [ [0.0, 0.1] ] # ❌
 ```
 
-Now the format is:
+## Experimental: Hybrid search
 
-```json
-"_vectors": {
-  "image2text": [0.0, 0.1, ...]
-}
+This release introduces hybrid search functionality. Hybrid search allows users to mix keyword and semantic search at search time.
+
+Use the `hybrid` search parameter to perform a hybrid search:
+
+```sh
+curl \
+  -X POST 'http://localhost:7700/indexes/movies/search' \
+  -H 'Content-Type: application/json' \
+  --data-binary '{ 
+    "q": "Plumbers and dinosaurs",
+    "hybrid": {
+        "semanticRatio": 0.9,
+        "embedder": "default"
+    }
+  }'
 ```
 
-To know more about the new usage, refer to the sections above about settings or to [the documentation](TBD)
+- `embedder` is the embedder you choose to perform the search among the ones you defined in your settings
+- `semanticRatio` is a number between `0` and `1`. The default value is `0.5`. `1` corresponds to a full semantic search and `0` corresponds to keyword search
 
 > [!TIP]
 > The new vector search functionality uses [Arroy](https://github.com/meilisearch/arroy), a Rust library developed by the Meilisearch engine team. Check out @Kerollmops [blog post describing the whole process](https://blog.kerollmops.com/spotify-inspired-elevating-meilisearch-with-hybrid-search-and-rust).
