Add missing info

--- a/meilisearch-release-changelog/v1.6.0.md
+++ b/meilisearch-release-changelog/v1.6.0.md
@@ -54,7 +54,7 @@ curl \
 
 Refer to [the documentation](TBD) for more vector search usage instructions.
 
-### ⚠️ Vector search breaking changes 
+### ⚠️ Vector search breaking changes
 
 If you have used vector search between v1.3.0 and v1.5.0, API usage has changed with v1.6:
 
@@ -78,6 +78,8 @@ If you have used vector search between v1.3.0 and v1.5.0, API usage has changed 
 "_vectors": [ [0.0, 0.1] ] # ❌
 ```
 
+Done in #4226 by @dureuill, @irevoire, @Kerollmops and @ManyTheFish.
+
 ## Experimental: Hybrid search
 
 This release introduces hybrid search functionality. Hybrid search allows users to mix keyword and semantic search at search time.
@@ -88,7 +90,7 @@ Use the `hybrid` search parameter to perform a hybrid search:
 curl \
   -X POST 'http://localhost:7700/indexes/movies/search' \
   -H 'Content-Type: application/json' \
-  --data-binary '{ 
+  --data-binary '{
     "q": "Plumbers and dinosaurs",
     "hybrid": {
         "semanticRatio": 0.9,
