--- a/meilisearch-release-changelog/v1.6.0.md
+++ b/meilisearch-release-changelog/v1.6.0.md
@@ -127,9 +127,9 @@ With a ~15Mb dataset, the created database is 40% and 50% smaller. Additionally,
 
 ## Customize proximity precision to gain indexing performance
 
-Still, in the purpose of reducing the indexing speed, you can now customize the accuracy of the [proximity ranking rules](https://www.meilisearch.com/docs/learn/core_concepts/relevancy#3-proximity) based on your needs.
+You can now customize the accuracy of the [proximity ranking rule](https://www.meilisearch.com/docs/learn/core_concepts/relevancy#3-proximity).
 
-However, the computation needed for the proximity ranking rule is huge and can lead to a big indexing time. Since the proximity ranking rule purpose for the search relevancy is not always necessary for your use case, you now have the possibility to make it less relevant to reduce the indexing speed. Indeed, depending on your use case, the relevancy impact can even be invisible.
+Computing this ranking rule uses a significant amount of resources and may lead to increased indexing times. Lowering its precision may lead to significant performance gains. In a minority of use cases, lower proximity precision may also impact relevancy for queries using multiple search terms.
 
 Use the `proximityPrecision` settings:
 
