--- a/meilisearch-release-changelog/v1.6.0.md
+++ b/meilisearch-release-changelog/v1.6.0.md
@@ -131,7 +131,7 @@ You can now customize the accuracy of the [proximity ranking rule](https://www.m
 
 Computing this ranking rule uses a significant amount of resources and may lead to increased indexing times. Lowering its precision may lead to significant performance gains. In a minority of use cases, lower proximity precision may also impact relevancy for queries using multiple search terms.
 
-Use the `proximityPrecision` settings:
+### Usage
 
 ```
 curl \
@@ -142,9 +142,9 @@ curl \
   }'
 ```
 
-The default value of `proximityPrecision` is `byWord`. `byAttribute` will improve your indexing performance but can impact the relevancy.
-
-Technical explanations: `byWord` considers the proximity as an exact distance between words, whereas `byAttribute` considers the proximity as if the words are in the same attribute or not, making it less accurate.
+`proximityPrecision` accepts either `byWord` or `byAttribute`:
+- `byWord` calculates the exact distance between words. This is the default setting.
+- `byAttribute` only determines whether words are present in the same attribute. It is less accurate, but provides better performance.
 
 Done in #4225 by @ManyTheFish.
 
