--- a/meilisearch-release-changelog/v1.6.0.md
+++ b/meilisearch-release-changelog/v1.6.0.md
@@ -125,7 +125,7 @@ Meilisearch now stores less internal data. This leads to smaller database disk s
 
 With a ~15Mb dataset, the created database is 40% and 50% smaller. Additionally, the database size has become more stable and will display more modest growth with new document additions.
 
-## Customize proximity precision to gain indexing performance
+## Proximity precision and performance
 
 You can now customize the accuracy of the [proximity ranking rule](https://www.meilisearch.com/docs/learn/core_concepts/relevancy#3-proximity).
 
